home page password icon alignment fixes

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -19,7 +19,7 @@
   .eye-icon {
     position: absolute;
     right: -4px;
-    top: -16px !important;
+    top: -20px !important;
   }
 }
 
@@ -285,7 +285,7 @@ mat-label {
       padding: 4px 0px;
       text-align: center;
       // width: 70px;
-      width: 78.1px;
+      width: 76.9px;
       height: 83px;
       border-radius: 5px;
       padding: 4px 0px;
